margin left fixed for vote on iphone

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -220,8 +220,7 @@ div.container {
     margin-right: 61px;
   }
   .vote-count {
-    margin-bottom: 0px;
-    z-index: 10;
+    margin-left: 50px;
   }
 }
 
@@ -235,8 +234,7 @@ div.container {
     margin-right: 61px;
   }
   .vote-count {
-    margin-bottom: 0px;
-    margin-top: -10px;
+    margin-left: 50px;
   }
 
 
